@@ -154,6 +154,10 @@ or
 .I false
 to set this explicitly.
 .TP
+.B "-l, --left"
+Make the bubble appear on the left hand side of the cow.  This is useful
+if you are using your own image.
+.TP
 .B "--debug"
 Print messages about what
 .B xcowsay
